# timba

./: Cargo.toml
resources/: quiniela.csv
src/: main.rs
src/fetchers/: loto_caba.rs  mod.rs
src/types/: loto_caba.rs  loto_ciudad.rs  mod.rs  quiniela.rs
