[package]
name = "timba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
eframe = "0.19.0"
rand = "0.8.5"
anyhow = "1"
reqwest = { version = "0.11.13", features = ["json"] }
chrono = "0.4.23"
quick-xml = "0.26.0"
scraper = "0.13.0"
roxmltree = "0.16.0"